간단한 기본정보 설정
기본 정보 업데이트

--- a/_config.yml
+++ b/_config.yml
@@ -113,15 +113,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  name             : "재서"
+  avatar           : path of avatar image, e.g. "assets\1.jpeg"
+  bio              : "자유로운 땃쥐"
+  location         : "한국"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+      url: "jaeseoyun9891@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
