--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "배찌배를때찌의 공부 로그"
+title                    : "땃쥐의 공부 일기장"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "재서"
-description              : "자유로움을 추구하는 사람입니다."
+description              : "자유로운 땃쥐"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -113,15 +113,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "재서"
-  avatar           : /assets/1.jpeg
+  name             : "땃쥐"
+  avatar           : "/assets/1.jpeg"
   bio              : "자유로운 땃쥐"
-  location         : "한국"
-  email            :
+  location         : "대한민국"
+  email            : "jaeseoyun9891@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto: jaeseoyun9891@gmail.com"
+      url: "mailto:jaeseoyun9891@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
