--- a/_config.yml
+++ b/_config.yml
@@ -327,6 +327,9 @@ defaults:
       related: true
       sidebar:
         nav: "categories_sidebar"
+      toc: true
+      toc_sticky: true
+      toc_label: "목차"
   
   
   
