--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: /categories/
   - title: "Tag"
     url: /tags/
+  - title: "Search"
+    url: /search/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
